--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js" defer></script>
     <title>Banking Application</title>
 </head>
 <body>
     <header>
         <nav class="nav">
             <div class="menu">
-                <button type="button" class="toggle-btn">hmgvv</button>
-                <img src="images/logo.png" alt="logo">
+                <button type="button" class="toggle-btn Btn">hmg</button>
+                <img src="images/logo.png" alt="logo" class="logo">
             </div>
             <div class="navlink">
-                <button type="button" class="closeBtn">close</button>
+                <button type="button" class="closeBtn Btn">close</button>
                 <ul class="navlinks">
                     <li><a href="#">Business</a></li>
                     <li><a href="#">Pricing</a></li>
@@ -29,7 +30,7 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main id="main">
         <section class="section">
             <article class="text-col">
                 <div class="container">
