--- a/index.html
+++ b/index.html
@@ -6,17 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="index.js" defer></script>
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+        integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <!-- google fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@300;400;500;600&family=Roboto+Slab:wght@400;500;600&family=Roboto:wght@400;500;700&display=swap"
+            rel="stylesheet">
     <title>Banking Application</title>
 </head>
 <body>
     <header>
         <nav class="nav">
             <div class="menu">
-                <button type="button" class="toggle-btn Btn">hmg</button>
+                <button type="button" class="toggle-btn Btn"><i class="fa-sharp fa-solid fa-bars"></i></button>
                 <img src="images/logo.png" alt="logo" class="logo">
             </div>
             <div class="navlink">
-                <button type="button" class="closeBtn Btn">close</button>
+                <button type="button" class="closeBtn Btn"><i class="fa-sharp fa-solid fa-xmark"></i></button>
                 <ul class="navlinks">
                     <li><a href="#">Business</a></li>
                     <li><a href="#">Pricing</a></li>
@@ -25,7 +35,7 @@
                 </ul>
             </div>
             <div class="loginBtn">
-                <button class="login btn">Log in</button>
+                <button class="login btn">Log in </button>
                 <button class="signup btn">Sign up</button>
             </div>
         </nav>
