--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
                 <img src="images/logo.png" alt="logo" class="logo">
             </div>
             <div class="navlink">
-                <button type="button" class="closeBtn Btn"><i class="fa-sharp fa-solid fa-xmark"></i></button>
+                <button type="button" class="closeBtn Btn"><i class="fa-sharp fa-solid fa-xmark"></i>
+                </button>
                 <ul class="navlinks">
                     <li><a href="#">Business</a></li>
                     <li><a href="#">Pricing</a></li>
@@ -116,7 +117,7 @@
         <hr>
     </section>
     <section class="download">
-        <div class="img__col">
+        <div class="img__col animate__left">
             <img src="images/download_phone.png" alt="download app phone image">
         </div>
         <div class="text__col">
@@ -161,7 +162,7 @@
                    
         </div>
         
-        <div class="img__col">
+        <div class="img__col animate__right">
             <img src="images/ORWHAT - iPhone.png" alt="download app phone image">
         </div>
         <hr>
