On branch master

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <hr>
     </section>
     <section class="download">
-        <div class="img__col animate__left">
+        <div class="img__col">
             <img src="images/download_phone.png" alt="download app phone image">
         </div>
         <div class="text__col">
@@ -162,7 +162,7 @@
                    
         </div>
         
-        <div class="img__col animate__right">
+        <div class="img__col ">
             <img src="images/ORWHAT - iPhone.png" alt="download app phone image">
         </div>
         <hr>
